Verif/Test/Invalide/test_erreur_3.82-3.deca
// Description:
//    Programme soulevant l'erreur (3.82)
// Resultats:
//    Erreur contextuelle
//    Ligne 14 : Les types 'int' et 'String' sont incompatibles avec l'opérateur binaire '||' (règle 3.82)
//
// Attributs: exec correct automatique
//
// Historique:
//    cree le 14/01/2012

boolean i;
{
   i = 1 || "a";
}